2006-01-13  Jonathan Pryor  <jonpryor@vt.edu>

	* Catalog.cs, UnixMarshal.cs: Throw `UnixIOException(Native.Errno.ENOMEM)`
	  instead of System.OutOfMemoryException.  OOME should be reserved for use 
	  by the CLR (according to FxDG).

2006-01-12  Jonathan Pryor  <jonpryor@vt.edu>

	* UnixPath.cs: Add ReadLink() and TryReadLink() methods.

2006-01-12  Miguel de Icaza  <miguel@novell.com>

	* PeerCred.cs: Do not define PeerCredData as this is a structure
	known to the runtime.  Instead use the Mono.Posix.PeerCredData
	internal class. 

2006-01-10  Jonathan Pryor <jonpryor@vt.edu>

	* Catalog.cs: Don't use
	  System.Runtime.InteropServices.Marshal.StringToHGlobalAuto(), use
	  UnixMarshal.StringToHeap().  We require that the converted string be in
	  UTF-8 format, but .NET's Marshal.StringToHGlobalAuto converts to the local
	  code page, *not* UTF-8 (Mono's does UTF-8).  UnixMarshal.StringToHeap
	  *always* does UTF-8, so use that instead.

2006-01-09  Jonathan Pryor <jonpryor@vt.edu>

	* FileTypes.cs: Remove [Flags] attribute -- these aren't bitfield values.
	* UnixFileSystemInfo.cs: Fix Is<<Type>> properties -- before it would
	  erroneously say that a symlink was a character device.  (This is because
	  device values are *not* [Flags] values, but code was assuming they were.)
	* UnixGroupInfo.cs: Clone the string[] returned from GetMemberNames().  We
	  don't want callers to change the underlying list.

2006-01-07  Jonathan Pryor <jonpryor@vt.edu>

	* UnixMarshal.cs: *Actually* put things in alphabetical order (like the
	  comment says).  I can speak english, really I can.

2006-01-06  Jonathan Pryor <jonpryor@vt.edu>

	* Catalog.cs: s/libintl/intl/g, since intl.dll is used by GTK+ on Windows,
	  not libintl.dll (according to
	  http://www.gimp.org/~tml/gimp/win32/downloads.html).

2006-01-03  Jonathan Pryor <jonpryor@vt.edu>

	* UnixMarshal.cs (CreateExceptionForError): Don't map ENOMEM to